new home page and headers changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Ronak Vadhaiya Portfolio">
   <meta name="author" content="Ronak Vadhaiya">
-  <title>Ronak Vadhaiya</title>
+  <title>Welcome to My Portfolio</title>
   <meta name="description" content="Software Engineer, Software Developer, Freelancer">
   <meta name="keywords" content="Python Developer, Software Engineer, Django, Java, React JS, MERN Stack, Node JS, HTML, CSS, JavaScript">
   <meta name="author" content="Ronak Vadhaiya">
@@ -80,15 +80,16 @@
   <div class="container-fluid p-0">
     <section class=" home resume-section p-lg-5 d-flex align-items-center" style="text-align: center;" id="home">
       <div class="w-100" style="margin: auto;">
-        <h2 class="mb-2 h2-greenblue" style="font-size:35px ! important;">👋 Hey there, I'm
+        <h2 class="mb-2 h2-greenblue" style="font-size:40px ! important;">👋 Hey there, I'm
         </h2>
-        <h2 class="mb-3 h2-greenblue" style="height: 90px;">
-        <a style="" href="" class="typewrite" data-period="5000" data-type='[ "Ronak Vadhaiya", "a Software Engineer", "CS Undergrad","and a Fun Teammate" ]'>
+        <h2 class="mb-3 p-t-3 h2-greenblue">
+        <a style="font-size: 100px;" href="" class="typewrite" data-period="5000" data-type='[ "Ronak Vadhaiya", "a Software Engineer", "CS Graduate","and a Fun Teammate" ]'>
           <span class="wrap"></span>
         </a>
       </h2>
-        <div class="subheading mb-2">Boston, Massachusetts, United States·
+        <div class=" h2-greenblue subheading" style="font-size:30px ! important;">Boston, Massachusetts, United States
         </div>
+        <br>
         <span class="badge badge-sm bg-lime-300 border-lime-400 font-semibold m-b-6 p-x-4 flex-wrap dark-white items-center" style="display: inline-block! important;">
 
           <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24" fill="currentColor" stroke-width="2" class="ai ai-CircleFill green-600 m-r-3">
@@ -167,7 +168,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience & Internships</h2>
+        <h2 class="mb-5 h2-greenblue">Experience & Internships</h2>
         <hr width="100%">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -290,7 +291,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5 h2-greenblue">Education</h2>
         <hr width="100%">
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
@@ -347,7 +348,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-3">Skills</h2>
+        <h2 class="mb-3 h2-greenblue">Skills</h2>
 
         <h4 class="text-primary">I work with all technologies below and always excited to explore new technologies and getting familiar with them is what I love.☁️🚀</h4>
         
@@ -602,7 +603,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
+        <h2 class="mb-5 h2-greenblue">Interests</h2>
         <hr width="100%">
         <p align="justify">Apart from being a developer, I enjoy most of my time being outdoors. I am Passionate in Karate and hence i give sometime to train myself and practice karate to keep my body fit and take part in competition regualarly</p>
         <hr width="95%">
@@ -614,7 +615,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5 h2-greenblue">Awards &amp; Certifications</h2>
         <hr width="100%">
         <ul class="fa-ul mb-0">
           <li>
